refactor(backend): update service implementations
- Update ArticleServiceImpl with search indexing events
- Update ProjectServiceImpl with async image processing
- Update ExperienceServiceImpl with new validation
- Update FileStorageServiceImpl with status tracking
- Update SiteConfigurationServiceImpl with caching