@@ -1,20 +1,24 @@
 package com.emmanuelgabe.portfolio.service.impl;
 
+import com.emmanuelgabe.portfolio.audit.AuditAction;
+import com.emmanuelgabe.portfolio.audit.Auditable;
 import com.emmanuelgabe.portfolio.dto.CreateTagRequest;
 import com.emmanuelgabe.portfolio.dto.TagResponse;
 import com.emmanuelgabe.portfolio.dto.UpdateTagRequest;
 import com.emmanuelgabe.portfolio.entity.Tag;
-import com.emmanuelgabe.portfolio.exception.ResourceNotFoundException;
 import com.emmanuelgabe.portfolio.mapper.TagMapper;
+
+import static com.emmanuelgabe.portfolio.util.EntityHelper.findOrThrow;
 import com.emmanuelgabe.portfolio.repository.TagRepository;
 import com.emmanuelgabe.portfolio.service.TagService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.cache.annotation.CacheEvict;
+import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Implementation of TagService interface
@@ -30,6 +34,7 @@ public class TagServiceImpl implements TagService {
     private final TagMapper tagMapper;
 
     @Override
+    @Cacheable(value = "tags", key = "'all'")
     @Transactional(readOnly = true)
     public List<TagResponse> getAllTags() {
         log.debug("[LIST_TAGS] Fetching all tags");
@@ -37,34 +42,31 @@ public class TagServiceImpl implements TagService {
         log.debug("[LIST_TAGS] Found {} tags", tags.size());
         return tags.stream()
                 .map(tagMapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
+    @Cacheable(value = "tags", key = "#id")
     @Transactional(readOnly = true)
     public TagResponse getTagById(Long id) {
         log.debug("[GET_TAG] Fetching tag - id={}", id);
-        Tag tag = tagRepository.findById(id)
-                .orElseThrow(() -> {
-                    log.warn("[GET_TAG] Tag not found - id={}", id);
-                    return new ResourceNotFoundException("Tag", "id", id);
-                });
+        Tag tag = findOrThrow(tagRepository.findById(id), "Tag", "id", id);
         return tagMapper.toResponse(tag);
     }
 
     @Override
+    @Cacheable(value = "tags", key = "'name:' + #name")
     @Transactional(readOnly = true)
     public TagResponse getTagByName(String name) {
         log.debug("[GET_TAG] Fetching tag - name={}", name);
-        Tag tag = tagRepository.findByName(name)
-                .orElseThrow(() -> {
-                    log.warn("[GET_TAG] Tag not found - name={}", name);
-                    return new ResourceNotFoundException("Tag", "name", name);
-                });
+        Tag tag = findOrThrow(tagRepository.findByName(name), "Tag", "name", name);
         return tagMapper.toResponse(tag);
     }
 
     @Override
+    @CacheEvict(value = "tags", allEntries = true)
+    @Auditable(action = AuditAction.CREATE, entityType = "Tag",
+            entityIdExpression = "#result.id", entityNameExpression = "#result.name")
     public TagResponse createTag(CreateTagRequest request) {
         log.debug("[CREATE_TAG] Creating tag - name={}", request.getName());
 
@@ -82,14 +84,13 @@ public class TagServiceImpl implements TagService {
     }
 
     @Override
+    @CacheEvict(value = "tags", allEntries = true)
+    @Auditable(action = AuditAction.UPDATE, entityType = "Tag",
+            entityIdExpression = "#id", entityNameExpression = "#result.name")
     public TagResponse updateTag(Long id, UpdateTagRequest request) {
         log.debug("[UPDATE_TAG] Updating tag - id={}", id);
 
-        Tag tag = tagRepository.findById(id)
-                .orElseThrow(() -> {
-                    log.warn("[UPDATE_TAG] Tag not found - id={}", id);
-                    return new ResourceNotFoundException("Tag", "id", id);
-                });
+        Tag tag = findOrThrow(tagRepository.findById(id), "Tag", "id", id);
 
         // Check if new name conflicts with existing tag
         if (request.getName() != null && !request.getName().equals(tag.getName())) {
@@ -99,7 +100,6 @@ public class TagServiceImpl implements TagService {
             }
         }
 
-        // Update only provided fields using MapStruct
         tagMapper.updateEntityFromRequest(request, tag);
 
         Tag updatedTag = tagRepository.save(tag);
@@ -108,15 +108,12 @@ public class TagServiceImpl implements TagService {
     }
 
     @Override
+    @CacheEvict(value = "tags", allEntries = true)
+    @Auditable(action = AuditAction.DELETE, entityType = "Tag", entityIdExpression = "#id")
     public void deleteTag(Long id) {
         log.debug("[DELETE_TAG] Deleting tag - id={}", id);
 
-        Tag tag = tagRepository.findById(id)
-                .orElseThrow(() -> {
-                    log.warn("[DELETE_TAG] Tag not found - id={}", id);
-                    return new ResourceNotFoundException("Tag", "id", id);
-                });
-
+        Tag tag = findOrThrow(tagRepository.findById(id), "Tag", "id", id);
         tagRepository.delete(tag);
         log.info("[DELETE_TAG] Tag deleted - id={}, name={}", id, tag.getName());
     }
